--- a/public/index.html
+++ b/public/index.html
@@ -10,4 +10,16 @@
     <p> Welcome to the chat app.</p>
 </body>
 
+<script src = "/socket.io/socket.io.js"></script>
+<script>
+    var socket = io();//to make a request to client open socket and create connection
+
+    socket.on('connect', () => {
+        console.log('Connected to server');
+    });
+    
+    socket.on('disconnect', () => {
+        console.log('Disconnected from the server');
+    });
+</script>
 </html>
