--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,19 @@
 
 <body>
     <p> Welcome to the chat app.</p>
+
+    <ol id ="messages"></ol>
+
+    <form id = "message-form">
+        <input name="message" type="text" placeholder="Message"/>
+        <button>Send</button>
+    </form>
 </body>
 
+
+
 <script src = "/socket.io/socket.io.js"></script>
+<script src = "/js/libs/jquery.min.js"></script>
 <script src = "/js/index.js"></script>
+
 </html>
